2008-10-26  Sam Steingold  <sds@gnu.org>

	* makemake.in: when re-creating gllib subdir,
	use "config.status $@/Makefile depfiles"
	instead of "config.status --file=$@/Makefile depfiles" as suggesed
	in <http://article.gmane.org/gmane.comp.lib.gnulib.bugs/15449>
	to work around an autoconf bug

2008-10-26  Sam Steingold  <sds@gnu.org>

	* configure (conf_dir): remove and inline (called just once);
	fix redirections to avoid the "/bin/sh: Illegal option --" error;
	check whether requested modules require FFI by looking at
	configure.in, Makefile, *.lisp instead of listing modules explicitly

2008-10-25  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/calls.c (FILE-STAT): init file variable

2008-10-25  Sam Steingold  <sds@gnu.org>

	separate potentially blocking system calls from heap access
	* pathname.d (check_file_reopen): use namestring_file_id instead
	of with_file_id
	* stream.d (find_open_file): second argument is uintB flags (this
	is not used as a callback anymore)
	* unix.d, unixaux.d, win32.d, win32aux.d (namestring_file_id):
	replaces with_file_id

2008-10-24  Sam Steingold  <sds@gnu.org>

	Support Berkeley-DB 2.7
	* modules/berkeley-db/configure.in: check for
	DB_ENV.log_set_config and DB_ENV.get_intermediate_dir_mode
	* modules/berkeley-db/bdb.c (DBE-SET-OPTIONS, DBE-GET-OPTIONS)
	[HAVE_DB_ENV_GET_INTERMEDIATE_DIR_MODE]: accept :INTERMEDIATE-DIR-MODE;
	[HAVE_DB_ENV_LOG_SET_CONFIG]:
	accept LOG-DIRECT LOG-DSYNC LOG-AUTO-REMOVE LOG-IN-MEMORY LOG-ZERO
	instead of DSYNC-LOG LOG-AUTOREMOVE LOG-INMEMORY DIRECT-LOG (1 extra)
	(dbe_get_intermediate_dir_mode): add DEFINE_DBE_GETTER1

2008-10-24  Sam Steingold  <sds@gnu.org>

	ensure that all module configures have aux build dir set up
	* m4/general.m4 (CL_MODULE_COMMON_CHECKS): call AC_CONFIG_AUX_DIR here
	* modules/berkeley-db/configure.in, modules/gdbm/configure.in,
	* modules/pari/configure.in, modules/pcre/configure.in,
	* modules/postgresql/configure.in, modules/regexp/configure.in,